Tests/Conformance/Generated/Builtin/Constant/Value/Ill_formed.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Value.Ill_formed

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_value_ill_formed "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/value/ill-formed/ill-formed.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Value.Ill_formed
